--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,7 +39,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    min-width: 1440px;
+    min-width: 1160px;
     font-family: "Rubik", "Arial", sans-serif;
     font-size: 18px;
     line-height: 30px;
@@ -299,20 +299,20 @@ img {
     cursor: pointer;
     outline: none;
     border: 2px solid #000000;
-    border-radius: 0px 20px 20px 0px;
+    border-radius: 0 20px 20px 0;
     display: none;
 }
 
 .user-navigation-search-button:focus-visible {
     border: 2px solid #af4fff;
-    border-radius: 0px 20px 20px 0px;
+    border-radius: 0 20px 20px 0;
 }
 
 .user-navigation-search-button:hover {
     border: 2px solid #000000;
     background-color: #000000;
     color: #ffffff;
-    border-radius: 0px 20px 20px 0px;
+    border-radius: 0 20px 20px 0;
 }
 
 .user-navigation-search-button:active {
@@ -424,7 +424,7 @@ img {
     content: "";
     top: -6px;
     left: 151px;
-    background-image: url(../images/basket-popup/triangle-popover.svg);
+    background-image: url("../images/basket-popup/triangle-popover.svg");
     background-repeat: no-repeat;
     z-index: 1;
     width: 14px;
@@ -486,7 +486,7 @@ img {
 }
 
 .popover-cart-button-delete {
-    background-image: url(../images/basket-popup/delete.svg);
+    background-image: url("../images/basket-popup/delete.svg");
     background-repeat: no-repeat;
     background-color: transparent;
     background-position: center;
@@ -738,7 +738,7 @@ img {
     position: absolute;
     width: 50px;
     height: 50px;
-    background-image: url(../images/catalog/catalog-button-plus.svg);
+    background-image: url("../images/catalog/catalog-button-plus.svg");
     background-repeat: no-repeat;
     left: 262px;
     top: 0;
@@ -749,15 +749,17 @@ img {
     position: absolute;
     width: 50px;
     height: 50px;
-    background-image: url(../images/catalog/catalog-button-minus.svg);
+    background-image: url("../images/catalog/catalog-button-minus.svg");
     background-repeat: no-repeat;
 }
 
 /* Слайдер */
 .slider {
     margin-bottom: 70px;
+    position: relative;
 }
 
+/* Класс необходим для отображения слайда */
 .slider-container {
     position: relative;
     display: flex;
@@ -805,7 +807,7 @@ img {
 .slider-next {
     content: "";
     position: absolute;
-    background-image: url(../images/slider/slider-button-left.svg);
+    background-image: url("../images/slider/slider-button-left.svg");
     background-repeat: no-repeat;
     top: 252px;
     left: 19px;
@@ -824,10 +826,10 @@ img {
 .slider-prev {
     content: "";
     position: absolute;
-    background-image: url(../images/slider/slider-button-right.svg);
+    background-image: url("../images/slider/slider-button-right.svg");
     background-repeat: no-repeat;
     top: 252px;
-    right: 19px;
+    left: 521px;
 }
 
 .slider-prev:focus-visible {
@@ -849,10 +851,16 @@ img {
     width: 560px;
 }
 
-/* Скрыл остальные слайды для дальнейшей реализации */
+/* Скрыл слайды для дальнейшей реализации */
+.slider-1,
 .slider-2,
 .slider-3 {
     display: none;
+}
+
+/* Класс добавлен для отображения слайда */
+.slider-current {
+    display: flex;
 }
 
 .slider-1::before {
@@ -1018,7 +1026,7 @@ img {
 .slider-pagination {
     position: absolute;
     content: "";
-    top: 352px;
+    bottom: 178px;
     right: 49px;
     display: flex;
     flex-wrap: wrap;
@@ -1054,12 +1062,10 @@ img {
     opacity: 0.6;
 }
 
-
 .slider-pagination-button:active {
     border: 2px solid #000000;
     opacity: 0.3;
 }
-
 
 .slider-pagination-button-current {
     background-color: #000000;
@@ -1285,7 +1291,7 @@ img {
 .advantages-item-1::after {
     position: absolute;
     content: "";
-    background-image: url(../images/advantage/delivery.svg);
+    background-image: url("../images/advantage/delivery.svg");
     background-repeat: no-repeat;
     top: 17px;
     left: 558px;
@@ -1302,7 +1308,7 @@ img {
 .advantages-item-2::after {
     position: absolute;
     content: "";
-    background-image: url(../images/advantage/garanty.svg);
+    background-image: url("../images/advantage/garanty.svg");
     background-repeat: no-repeat;
     top: -7px;
     left: 545px;
@@ -1318,7 +1324,7 @@ img {
 .advantages-item-3::after {
     position: absolute;
     content: "";
-    background-image: url(../images/advantage/credit.svg);
+    background-image: url("../images/advantage/credit.svg");
     background-repeat: no-repeat;
     top: -7px;
     left: 533px;
@@ -1379,7 +1385,7 @@ img {
 .delivery-button-container::before {
     position: absolute;
     content: "";
-    background-image: url(../images/info.svg);
+    background-image: url("../images/info.svg");
     background-repeat: no-repeat;
     background-position: 50%;
     top: 29px;
@@ -1452,7 +1458,7 @@ img {
     content: "";
     width: 125px;
     height: 100px;
-    background-image: url(../images/delivery-button.svg);
+    background-image: url("../images/delivery-button.svg");
     background-repeat: no-repeat;
     background-position: 50%;
     top: 0;
@@ -1777,7 +1783,7 @@ img {
 .subscription-mark::before {
     position: absolute;
     content: "";
-    background-image: url(../images/subscribe.svg);
+    background-image: url("../images/subscribe.svg");
     background-repeat: no-repeat;
     width: 14px;
     height: 14px;
@@ -1796,6 +1802,12 @@ img {
     padding-bottom: 62px;
 }
 
+/* Логотип в подвале */
+.footer-logo:focus-visible {
+    outline: 2px solid #af4fff;
+    outline-offset: 10px;
+    border-radius: 1px;
+}
 
 /* Контакты */
 .footer-list-container {
@@ -1904,7 +1916,7 @@ img {
     grid-template-columns: 280px auto 280px;
     align-items: center;
     grid-template-areas:
-       ". center right";
+      ". center right";
 }
 
 .footer-social-container::before {
@@ -2037,7 +2049,7 @@ img {
     height: 26px;
     background-color: #ffffff;
     border: none;
-    background-image: url(../images/modal-window/closed-modal.svg);
+    background-image: url("../images/modal-window/closed-modal.svg");
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
@@ -2140,7 +2152,7 @@ img {
     right: 20px;
     width: 13px;
     height: 12px;
-    background-image: url(../images/modal-window/modal-name.svg);
+    background-image: url("../images/modal-window/modal-name.svg");
     background-repeat: no-repeat;
 }
 
@@ -2169,7 +2181,7 @@ img {
     right: 20px;
     width: 15px;
     height: 12px;
-    background-image: url(../images/modal-window/modal-e-mail.svg);
+    background-image: url("../images/modal-window/modal-e-mail.svg");
     background-repeat: no-repeat;
 }
 
@@ -2196,7 +2208,7 @@ img {
     right: 14px;
     width: 26px;
     height: 26px;
-    background-image: url(../images/modal-window/modal-info.svg);
+    background-image: url("../images/modal-window/modal-info.svg");
     background-repeat: no-repeat;
     cursor: pointer;
 }
@@ -2206,7 +2218,7 @@ img {
     content: "";
     top: 56px;
     left: 19px;
-    background-image: url(../images/modal-window/modal-minus.svg);
+    background-image: url("../images/modal-window/modal-minus.svg");
     background-repeat: no-repeat;
     background-position: center;
     border: none;
@@ -2224,7 +2236,7 @@ img {
     content: "";
     top: 56px;
     right: 19px;
-    background-image: url(../images/modal-window/modal-plus.svg);
+    background-image: url("../images/modal-window/modal-plus.svg");
     background-repeat: no-repeat;
     background-position: center;
     border: none;
@@ -2321,7 +2333,7 @@ img {
     right: 40px;
     width: 14px;
     height: 6px;
-    background-image: url(../images/basket-popup/triangle-popover.svg);
+    background-image: url("../images/basket-popup/triangle-popover.svg");
 }
 
 .modal-info-text {
@@ -2383,7 +2395,7 @@ img {
 .breadcrumbs-item:not(:last-child)::after {
     position: absolute;
     content: "";
-    background-image: url(../images/catalog/breadcrumbs.svg);
+    background-image: url("../images/catalog/breadcrumbs.svg");
     background-repeat: no-repeat;
     background-position: center;
     opacity: 0.2;
@@ -2414,7 +2426,6 @@ img {
 }
 
 /* Секция каталог и продукты*/
-
 /* Фильтр и сортировка */
 .catalog-top-wrapper {
     content: "";
@@ -2427,7 +2438,8 @@ img {
     display: grid;
     grid-template-columns: 328px 832px;
     grid-template-rows: 70px;
-    grid-template-areas: "header-filter header-sorting";
+    grid-template-areas: 
+      "header-filter header-sorting";
 }
 
 /* Фильтр */
@@ -2561,7 +2573,7 @@ img {
     height: 10px;
     top: 0;
     left: 0;
-    background-image: url(../images/catalog/sorting-up.svg);
+    background-image: url("../images/catalog/sorting-up.svg");
     margin-right: 19px;
     opacity: 0.3;
 }
@@ -2577,7 +2589,7 @@ img {
     height: 10px;
     top: 0;
     left: 0;
-    background-image: url(../images/catalog/sorting-down.svg);
+    background-image: url("../images/catalog/sorting-down.svg");
     opacity: 0.3;
 }
 
@@ -2594,7 +2606,7 @@ img {
     display: grid;
     grid-template-columns: 328px 832px;
     grid-template-areas:
-       "filter products";
+      "filter products";
 }
 
 /* Фильтрация */
@@ -2853,7 +2865,6 @@ img {
 }
 
 /* Radio */
-
 .control-input[type="radio"] + .control-mark {
     border-radius: 50%;
     border-color: rgba(0, 0, 0, 0.2);
@@ -2961,7 +2972,6 @@ img {
     outline: none;
     border: none;
 }
-
 
 /* Товары */
 .products-container {
@@ -3223,7 +3233,7 @@ img {
     margin-left: auto;
 }
 
-.paginetion-item {
+.pagination-item {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
     font-size: 16px;
